align actions correctly at mobile

--- a/src/scss/alert/_regular.scss
+++ b/src/scss/alert/_regular.scss
@@ -16,6 +16,10 @@
 	.#{$class}--alert-bleed {
 		height: $_o-message-alert-height;
 
+		@include oGridRespondTo($until: S) {
+			height: 100%;
+		}
+
 		.#{$class}__container:before {
 			top: ($_o-message-alert-height - $_o-message-alert-icon-size) / 2;
 		}
@@ -42,10 +46,12 @@
 		.#{$class}__actions {
 			@extend %o-message-alert-notice-actions;
 
-			&__secondary {
-				@include oGridRespondTo($until: S) {
+			@include oGridRespondTo($until: S) {
+				margin: 0 0 8px 0 ;
+
+				&__secondary {
 					display: none;
-				};
+				}
 			}
 		}
 	}
